src/sql/doc/snippets/code/src_sql_kernel_qsqldriver.cpp
@@ -51,10 +51,10 @@
 //! [0]
 QSqlDatabase db = ...;
 QVariant v = db.driver()->handle();
-if (v.isValid() && qstrcmp(v.typeName(), "sqlite3*")==0) {
+if (v.isValid() && qstrcmp(v.typeName(), "sqlite3*") == 0) {
     // v.data() returns a pointer to the handle
     sqlite3 *handle = *static_cast<sqlite3 **>(v.data());
-    if (handle != 0) { // check that it is not NULL
+    if (handle) {
         ...
     }
 }
@@ -62,13 +62,13 @@ if (v.isValid() && qstrcmp(v.typeName(), "sqlite3*")==0) {
 
 
 //! [1]
-if (qstrcmp(v.typeName(), "PGconn*")) {
+if (qstrcmp(v.typeName(), "PGconn*") == 0) {
     PGconn *handle = *static_cast<PGconn **>(v.data());
-    if (handle != 0) ...
+    if (handle) ...
 }
 
-if (qstrcmp(v.typeName(), "MYSQL*")) {
+if (qstrcmp(v.typeName(), "MYSQL*") == 0) {
     MYSQL *handle = *static_cast<MYSQL **>(v.data());
-    if (handle != 0) ...
+    if (handle) ...
 }
 //! [1]
